# se-toolkit-lab-8

./: Dockerfile.nanobot  REPORT.md  docker-compose.yml  pyproject.toml
backend/app/routers/: items.py
caddy/: Caddyfile
mcp/mcp-observability/: pyproject.toml
mcp/mcp-observability/mcp_observability/: __init__.py
mcp/mcp_observability/: __main__.py  server.py
nanobot/: Dockerfile  config.json  entrypoint.py  pyproject.toml
nanobot/workspace/sessions/: cli_direct.jsonl
nanobot/workspace/skills/lms/: SKILL.md
nanobot/workspace/skills/observability/: SKILL.md
